--- a/Atividade01.ipynb
+++ b/Atividade01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,15 +32,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0 1 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 2 2 1 2 2 2 2 2 1 1]\n",
-      "[0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 2 2 2 2 2 2 2 2 2 2]\n"
+      "[0 1 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 2 2 1 2 2 2 1 2 2 1]\n",
+      "[0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 2 2 2 2 2 2 2 2 2 2]\n",
+      "[[ 9  1  0]\n",
+      " [ 0 10  0]\n",
+      " [ 0  3  7]]\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "          0       1.00      0.90      0.95        10\n",
+      "          1       0.71      1.00      0.83        10\n",
+      "          2       1.00      0.70      0.82        10\n",
+      "\n",
+      "avg / total       0.90      0.87      0.87        30\n",
+      "\n"
      ]
     }
    ],
@@ -51,33 +62,107 @@
     "y_previsto = clf.predict(x_teste)\n",
     "\n",
     "print(y_previsto)\n",
-    "print(y_teste)"
+    "print(y_teste)\n",
+    "\n",
+    "from sklearn.metrics import classification_report, confusion_matrix  \n",
+    "print(confusion_matrix(y_teste,y_previsto))  \n",
+    "print(classification_report(y_teste,y_previsto))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0 1 0 0 0 0 0 0 0 0 1 2 1 1 2 1 1 2 2 1 1 1 1 2 2 1 1 2 2 1]\n",
+      "[0 1 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 2 2 1 2 2 2 1 2 2 1]\n",
+      "[0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 2 2 2 2 2 2 2 2 2 2]\n",
+      "[[ 9  1  0]\n",
+      " [ 0 10  0]\n",
+      " [ 0  3  7]]\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "          0       1.00      0.90      0.95        10\n",
+      "          1       0.71      1.00      0.83        10\n",
+      "          2       1.00      0.70      0.82        10\n",
+      "\n",
+      "avg / total       0.90      0.87      0.87        30\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "\n",
+    "clf = GaussianNB()\n",
+    "clf.fit(x_treino, y_treino)\n",
+    "\n",
+    "y_previsto = clf.predict(x_teste)\n",
+    "\n",
+    "print(y_previsto)\n",
+    "print(y_teste)\n",
+    "\n",
+    "from sklearn.metrics import classification_report, confusion_matrix  \n",
+    "print(confusion_matrix(y_teste,y_previsto))  \n",
+    "print(classification_report(y_teste,y_previsto))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 2 1 1 1 2 1 2 2 1 2 1 1 1]\n",
       "[0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 2 2 2 2 2 2 2 2 2 2]\n"
      ]
     }
    ],
    "source": [
-    "from sklearn import tree\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
     "\n",
-    "clf = tree.DecisionTreeClassifier()\n",
+    "clf = KNeighborsClassifier()\n",
     "clf.fit(x_treino, y_treino)\n",
     "\n",
     "y_previsto = clf.predict(x_teste)\n",
     "\n",
     "print(y_previsto)\n",
     "print(y_teste)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[10  0  0]\n",
+      " [ 0  9  1]\n",
+      " [ 0  6  4]]\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "          0       1.00      1.00      1.00        10\n",
+      "          1       0.60      0.90      0.72        10\n",
+      "          2       0.80      0.40      0.53        10\n",
+      "\n",
+      "avg / total       0.80      0.77      0.75        30\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import classification_report, confusion_matrix  \n",
+    "print(confusion_matrix(y_teste,y_previsto))  \n",
+    "print(classification_report(y_teste,y_previsto))"
    ]
   },
   {
@@ -85,17 +170,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "\n",
-    "clf = KNeighborsClassifier(n_neighbors = 1)\n",
-    "clf.fit(x_treino, y_treino)\n",
-    "\n",
-    "y_previsto = clf.predict(x_teste)\n",
-    "\n",
-    "print(y_previsto)\n",
-    "print(y_teste)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
