Comparação entre os três algoritmos

--- a/Atividade01.ipynb
+++ b/Atividade01.ipynb
@@ -1,20 +1,51 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 17,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from sklearn import datasets\n",
-    "import matplotlib.pyplot as plt\n",
-    "from sklearn.neural_network import MLPClassifier\n",
-    "import numpy"
+    "<center><h1>Comparação entre três classificadores</h1></center>\n",
+    "<p>Instituto Federal do Norte de Minas - IFNMG Montes Claros</p>\n",
+    "<p><b>Curso:</b> Ciência da Computação</p>\n",
+    "<p><b>Disciplina:</b> Tópicos em Inteligência Computacional</p>\n",
+    "<p><b>Professora:</b> Luciana Balieiro Cosme</p>\n",
+    "<p><b>Equipe:</b> Yoskoslowich S. N. Fernandes, Breno P. Santos e Daniel</p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Este trabalho apresenta uma comparação entre três classificadores: MPLClassifier (perceptron multi-camda), KNN e Naive Bayes. A célula abaixo realiza a importanção dos três algoritmos, da base de dados e de outras ferramentas necessárias."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.neural_network import MLPClassifier\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "\n",
+    "from sklearn import datasets\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy\n",
+    "from sklearn.metrics import classification_report, confusion_matrix  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A base de dados utilizada foi a íris que contém 150 amostras; sendo 50 de cada um de três tipos diferentes de flores: setosa, versicolor, virginica. Cada amostra contém quatro características, que são: (1) comprimento da sépala, (2) largura da sépala, (3) comprimento da pétala e (4) largura da pétala; contudo apenas as duas primeiras foram utilizadas. Das 50 amostras de cada classe de flor, 40 foram usadas para treinamento e as outras 10 para testar o aprendizado."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,23 +58,34 @@
     "x_teste = numpy.concatenate( [ x[40:50, :], x[90:100, :], x[140:150, :] ] )\n",
     "\n",
     "y_treino = numpy.concatenate( [ y[0:40], y[50:90], y[100:140] ] )\n",
-    "y_teste = numpy.concatenate( [ y[40:50], y[90:100], y[140:150] ] )\n"
+    "y_teste = numpy.concatenate( [ y[40:50], y[90:100], y[140:150] ] )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Abaixo os resultados do MPLClassifier. Ele classificou corretamente 25 das 30 amostras."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0 1 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 2 2 1 2 2 2 1 2 2 1]\n",
+      "[0 1 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 2 2 1 2 2 2 2 2 1 1]\n",
       "[0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 2 2 2 2 2 2 2 2 2 2]\n",
+      "\n",
+      "\n",
       "[[ 9  1  0]\n",
       " [ 0 10  0]\n",
       " [ 0  3  7]]\n",
+      "\n",
+      "\n",
       "             precision    recall  f1-score   support\n",
       "\n",
       "          0       1.00      0.90      0.95        10\n",
@@ -64,14 +106,22 @@
     "print(y_previsto)\n",
     "print(y_teste)\n",
     "\n",
-    "from sklearn.metrics import classification_report, confusion_matrix  \n",
+    "print(\"\\n\")\n",
     "print(confusion_matrix(y_teste,y_previsto))  \n",
+    "print(\"\\n\")\n",
     "print(classification_report(y_teste,y_previsto))"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Abaixo os resultados do obtidos com o Naive Bayes. Ele classificou corretamente 26 das 30 amostras."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -80,9 +130,13 @@
      "text": [
       "[0 1 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 2 2 1 2 2 2 1 2 2 1]\n",
       "[0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 2 2 2 2 2 2 2 2 2 2]\n",
+      "\n",
+      "\n",
       "[[ 9  1  0]\n",
       " [ 0 10  0]\n",
       " [ 0  3  7]]\n",
+      "\n",
+      "\n",
       "             precision    recall  f1-score   support\n",
       "\n",
       "          0       1.00      0.90      0.95        10\n",
@@ -95,8 +149,6 @@
     }
    ],
    "source": [
-    "from sklearn.naive_bayes import GaussianNB\n",
-    "\n",
     "clf = GaussianNB()\n",
     "clf.fit(x_treino, y_treino)\n",
     "\n",
@@ -105,14 +157,22 @@
     "print(y_previsto)\n",
     "print(y_teste)\n",
     "\n",
-    "from sklearn.metrics import classification_report, confusion_matrix  \n",
+    "print(\"\\n\")\n",
     "print(confusion_matrix(y_teste,y_previsto))  \n",
+    "print(\"\\n\")\n",
     "print(classification_report(y_teste,y_previsto))"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Abaixo os resultados do KNN. Ele classificou corretamente 23 das 30 amostras."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -120,34 +180,14 @@
      "output_type": "stream",
      "text": [
       "[0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 2 1 1 1 2 1 2 2 1 2 1 1 1]\n",
-      "[0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 2 2 2 2 2 2 2 2 2 2]\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "\n",
-    "clf = KNeighborsClassifier()\n",
-    "clf.fit(x_treino, y_treino)\n",
-    "\n",
-    "y_previsto = clf.predict(x_teste)\n",
-    "\n",
-    "print(y_previsto)\n",
-    "print(y_teste)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "[0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 2 2 2 2 2 2 2 2 2 2]\n",
+      "\n",
+      "\n",
       "[[10  0  0]\n",
       " [ 0  9  1]\n",
       " [ 0  6  4]]\n",
+      "\n",
+      "\n",
       "             precision    recall  f1-score   support\n",
       "\n",
       "          0       1.00      1.00      1.00        10\n",
@@ -160,17 +200,58 @@
     }
    ],
    "source": [
-    "from sklearn.metrics import classification_report, confusion_matrix  \n",
+    "clf = KNeighborsClassifier()\n",
+    "clf.fit(x_treino, y_treino)\n",
+    "\n",
+    "y_previsto = clf.predict(x_teste)\n",
+    "\n",
+    "print(y_previsto)\n",
+    "print(y_teste)\n",
+    "\n",
+    "print(\"\\n\")\n",
     "print(confusion_matrix(y_teste,y_previsto))  \n",
+    "print(\"\\n\")\n",
     "print(classification_report(y_teste,y_previsto))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "A tabela abaixo apresenta o número de acertos de cada algoritmo por categoria de flor."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<table>\n",
+    "    <tr>\n",
+    "        <td>Tipo</td>\n",
+    "        <td>MPLClassifier</td>\n",
+    "        <td>Naive Bayes</td>\n",
+    "        <td>KNN</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td>setosa</td>\n",
+    "        <td>90%</td>\n",
+    "        <td>90%</td>\n",
+    "        <td>100%</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td>versicolor</td>\n",
+    "        <td>100%</td>\n",
+    "        <td>100%</td>\n",
+    "        <td>90%</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td>virginica</td>\n",
+    "        <td>70%</td>\n",
+    "        <td>70%</td>\n",
+    "        <td>40%</td>\n",
+    "    </tr>\n",
+    "</table>"
+   ]
   }
  ],
  "metadata": {
