--- a/Atividade02.ipynb
+++ b/Atividade02.ipynb
@@ -1,23 +1,24 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 5,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Equipe de Trabalho: \n",
-    "# Daniel, Breno e Yoskoslowich"
+    "<center><h1>PSO Rastrigin</h1></center>\n",
+    "<p>Instituto Federal do Norte de Minas - IFNMG Montes Claros</p>\n",
+    "<p><b>Curso:</b> Ciência da Computação</p>\n",
+    "<p><b>Disciplina:</b> Tópicos em Inteligência Computacional</p>\n",
+    "<p><b>Professora:</b> Luciana Balieiro Cosme</p>\n",
+    "<p><b>Equipe:</b> Yoskoslowich S. N. Fernandes, Breno P. Santos e Daniel Antunes</p>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# FONTE:\n",
-    "# https://jamesmccaffrey.wordpress.com/2015/06/09/particle-swarm-optimization-using-python/\n",
+    "# FONTE: https://jamesmccaffrey.wordpress.com/2015/06/09/particle-swarm-optimization-using-python/\n",
     "# particleswarm.py\n",
     "# solves Rastrigin's function\n",
     "\n",
@@ -41,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -75,10 +76,18 @@
       "\n",
       "-0.0009  0.0070 -0.0006  0.0018 \n",
       "\n",
-      "Error of best solution = 0.010606\n",
-      "\n",
-      "End particle swarm demo\n",
-      "\n"
+      "Error of best solution = 0.010606\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'swarm' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-28-a03c96a09411>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m    114\u001b[0m \u001b[0merr\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0merror\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbest_position\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    115\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Error of best solution = %.6f\"\u001b[0m \u001b[1;33m%\u001b[0m \u001b[0merr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 116\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mswarm\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    117\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"\\nEnd particle swarm demo\\n\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'swarm' is not defined"
      ]
     }
    ],
@@ -90,7 +99,6 @@
     "    xi = position[i]\n",
     "    err += (xi * xi) - (10 * math.cos(2 * math.pi * xi)) + 10\n",
     "  return err\n",
-    "\n",
     "# ------------------------------------\n",
     "\n",
     "class Particle:\n",
@@ -114,7 +122,7 @@
     "  rnd = random.Random(0)\n",
     "\n",
     "  # create n random particles\n",
-    "  swarm = [Particle(dim, minx, maxx, i) for i in range(40)] \n",
+    "  swarm = [Particle(dim, minx, maxx, i) for i in range(n)] \n",
     "\n",
     "  best_swarm_pos = [0.0 for i in range(dim)] # not necess.\n",
     "  best_swarm_err = sys.float_info.max # swarm best\n",
@@ -199,7 +207,6 @@
     "show_vector(best_position)\n",
     "err = error(best_position)\n",
     "print(\"Error of best solution = %.6f\" % err)\n",
-    "\n",
     "print(\"\\nEnd particle swarm demo\\n\")\n"
    ]
   },
