--- a/Atividade02.ipynb
+++ b/Atividade02.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,47 +42,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Begin particle swarm optimization using Python demo\n",
-      "\n",
-      "Goal is to solve Rastrigin's function in 4 variables\n",
-      "Function has known min = 0.0 at (0, 0, 0, 0)\n",
-      "Setting num_particles = 50\n",
-      "Setting max_epochs    = 100\n",
-      "\n",
-      "Starting PSO algorithm\n",
-      "\n",
-      "Epoch = 10 best error = 15.606\n",
-      "Epoch = 20 best error = 8.308\n",
-      "Epoch = 30 best error = 4.761\n",
-      "Epoch = 40 best error = 3.708\n",
-      "Epoch = 50 best error = 2.004\n",
-      "Epoch = 60 best error = 0.700\n",
-      "Epoch = 70 best error = 0.086\n",
-      "Epoch = 80 best error = 0.018\n",
-      "Epoch = 90 best error = 0.012\n",
-      "\n",
-      "PSO completed\n",
-      "\n",
-      "\n",
-      "Best solution found:\n",
-      "\n",
-      "-0.0009  0.0070 -0.0006  0.0018 \n",
-      "\n",
-      "Error of best solution = 0.010606\n",
-      "\n",
-      "End particle swarm demo\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Cálculo Rastrigin\n",
     "def error(position):\n",
@@ -173,8 +135,53 @@
     "    epoch += 1\n",
     "  # while\n",
     "  return best_swarm_pos\n",
-    "# end Solve\n",
-    "\n",
+    "# end Solve"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Begin particle swarm optimization using Python demo\n",
+      "\n",
+      "Goal is to solve Rastrigin's function in 4 variables\n",
+      "Function has known min = 0.0 at (0, 0, 0, 0)\n",
+      "Setting num_particles = 50\n",
+      "Setting max_epochs    = 100\n",
+      "\n",
+      "Starting PSO algorithm\n",
+      "\n",
+      "Epoch = 10 best error = 15.606\n",
+      "Epoch = 20 best error = 8.308\n",
+      "Epoch = 30 best error = 4.761\n",
+      "Epoch = 40 best error = 3.708\n",
+      "Epoch = 50 best error = 2.004\n",
+      "Epoch = 60 best error = 0.700\n",
+      "Epoch = 70 best error = 0.086\n",
+      "Epoch = 80 best error = 0.018\n",
+      "Epoch = 90 best error = 0.012\n",
+      "\n",
+      "PSO completed\n",
+      "\n",
+      "\n",
+      "Best solution found:\n",
+      "\n",
+      "-0.0009  0.0070 -0.0006  0.0018 \n",
+      "\n",
+      "Error of best solution = 0.010606\n",
+      "\n",
+      "End particle swarm demo\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
     "print(\"\\nBegin particle swarm optimization using Python demo\\n\")\n",
     "dim = 4\n",
     "print(\"Goal is to solve Rastrigin's function in \" +\n",
@@ -201,13 +208,6 @@
     "print(\"Error of best solution = %.6f\" % err)\n",
     "print(\"\\nEnd particle swarm demo\\n\")\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
