--- a/Trabalho/ENADE2014.ipynb
+++ b/Trabalho/ENADE2014.ipynb
@@ -592,7 +592,7 @@
    "source": [
     "#nota geral agrupada pela questão 05\n",
     "#tabela['CO_REGIAO_CURSO'] = tabela['CO_REGIAO_CURSO'].map({1 : 'N', 2 : 'NE', 3 : 'SE', 4 : 'S', 5 : 'CO'})\n",
-    "tabela['NT_GER'].groupby(tabela['CO_REGIAO_CURSO']).describe()"
+    "#tabela['NT_GER'].groupby(tabela['CO_REGIAO_CURSO']).describe()"
    ]
   },
   {
